# sshwarma

./: .editorconfig  .gitignore  .luarc.json  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  gemini-code-review.md  models.toml  models.toml.example  review-request.md  todo.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue.md
configs/: atobey.lua  startup.lua.example
docs/: phase2-tools-as-wrap-layer.md  ui-review-findings.md  wrap-integration-plan.md
docs/agents/: design-guide.md
docs/agents/plans/: ssh-test-client.md
docs/agents/plans/inventory/: README.md
docs/agents/plans/lua-ui/: 01-require.md  02-input.md  03-regions.md  04-tools-api.md  05-commands.md  06-chat.md  07-streaming.md  08-integration.md  09-cleanup.md  DETAIL.md  README.md
docs/agents/plans/mcp-manager/: 01-backoff.md  02-events.md  03-manager.md  04-lua-api.md  05-integration.md  DETAIL.md  README.md
docs/design/: help-system.md  lua-functional-ui.md  overlay-to-pages-migration.md
scripts/: debug-overlay.sh  dev-cycle.sh  test-chat.sh  test-haiku.sh  test-hot-reload.sh  test-input.sh  test-ui.sh
src/: ansi.rs  comm.rs  commands.rs  config.rs  db.rs  internal_tools.rs  interp.rs  lib.rs  line_editor.rs  llm.rs  main.rs  mcp.rs  mcp_server.rs  model.rs  ops.rs  paths.rs  player.rs  prompt.rs  rules.rs  ssh.rs  state.rs  status.rs  terminal.rs  world.rs
src/completion/: commands.rs  mod.rs  models.rs  rooms.rs  tools.rs
src/db/: agents.rs  buffers.rs  equipped.rs  exits.rs  mod.rs  rooms.rs  rows.rs  rules.rs  schema.rs  scripts.rs  things.rs  view.rs
src/display/: ledger.rs  mod.rs  renderer.rs  styles.rs
src/display/hud/: mod.rs  renderer.rs  spinner.rs  state.rs
src/embedded/: hud.lua  init.lua  screen.lua  wrap.lua
src/embedded/commands/: conjure.lua  debug.lua  history.lua  init.lua  inventory.lua  journal.lua  mcp.lua  nav.lua  prompt.lua  reload.lua  room.lua  rules.lua
src/embedded/help/: fun.md  inspect.md  journal.md  room.md  str.md  tools.md
src/embedded/lib/: help.lua  inspect.lua  page.lua  str.lua  util.lua
src/embedded/mcp/: add_exit.lua  create_room.lua  echo_test.lua  fork_room.lua  help.lua  init.lua  inventory.lua  models.lua  room_context.lua  rooms.lua  row.lua  rows.lua  say.lua  scripts.lua  set_vibe.lua  things.lua
src/embedded/tools/: create.lua  exits.lua  fork.lua  go.lua  history.lua  join.lua  leave.lua  look.lua  rooms.lua  say.lua  vibe.lua  who.lua
src/embedded/ui/: bars.lua  input.lua  layout.lua  mode.lua  pages.lua  regions.lua  scroll.lua
src/interp/: commands.rs
src/lua/: cache.rs  context.rs  data.rs  dirty.rs  mcp_bridge.rs  mod.rs  registry.rs  reload.rs  render.rs  tool_middleware.rs  tools.rs  watcher.rs  wrap.rs  wrap_tools.rs
src/mcp/: backoff.rs  client.rs  events.rs  manager.rs  mod.rs
src/ssh/: handler.rs  hud.rs  input.rs  mod.rs  screen.rs  session.rs  streaming.rs
src/testing/: mod.rs  ssh_client.rs
src/ui/: input.rs  layout.rs  mod.rs  render.rs  scroll.rs
systemd/: sshwarma.service
tests/: e2e.rs
