[package]
name = "sshwarma"
version = "0.1.0"
edition = "2021"
description = "SSH-accessible partyline for humans and models"
license = "MIT OR Apache-2.0"

[dependencies]
# SSH server
russh = "0.56"
rand = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# MCP client/server via rmcp (official Rust SDK)
# - client + transport-streamable-http-client-reqwest for connecting to holler
# - server + transport-streamable-http-server for exposing tools to Claude Code
rmcp = { version = "0.12", features = [
    "client",
    "server",
    "macros",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
] }

# LLM via rig (supports OpenAI, Anthropic, Ollama with native tool support)
# Using local clone for rmcp 0.12 compatibility (main branch)
rig-core = { path = "../rig/rig/rig-core", features = ["rmcp"] }

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
toml = "0.8"

# HTTP server for MCP
axum = "0.8"

# Rich terminal input
tui-input = { version = "0.11", default-features = false }
nucleo-matcher = "0.3"

# Terminal output formatting
crossterm = "0.28"

# Lua scripting for HUD customization
# send feature enables Send+Sync for Lua state (needed for async handlers)
mlua = { version = "0.10", features = ["luau", "serialize", "send"] }

[dev-dependencies]
tokio-test = "0.4"
