[package]
name = "sshwarma"
version = "0.1.0"
edition = "2021"
description = "MUD-inspired collaboration space for humans, models, and tools"
license = "MIT"

[dependencies]
# SSH server
russh = "0.56"
rand = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# MCP client/server via rmcp (official Rust SDK)
# - client + transport-streamable-http-client-reqwest for connecting to holler
# - server + transport-streamable-http-server for exposing tools to Claude Code
rmcp = { version = "0.12", features = [
    "client",
    "server",
    "macros",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
] }

# LLM via rig (supports OpenAI, Anthropic, Ollama with native tool support)
# Using git main for rmcp 0.12 compatibility (not yet released to crates.io)
rig-core = { git = "https://github.com/0xPlaygrounds/rig.git", rev = "7d0f19d5", features = ["rmcp"] }

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry (OTLP export for traces and metrics)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "metrics"] }
tracing-opentelemetry = "0.28"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4", "v7"] }
dashmap = "6"
toml = "0.8"

# HTTP server for MCP
axum = "0.8"

# Rich terminal input
tui-input = { version = "0.11", default-features = false }
nucleo-matcher = "0.3"

# Terminal output formatting
crossterm = "0.28"
unicode-width = "0.2"

# Lua scripting for HUD customization
# send feature enables Send+Sync for Lua state (needed for async handlers)
mlua = { version = "0.10", features = ["luau", "serialize", "send"] }
tokio-util = { version = "0.7.17", features = ["rt"] }

[features]
default = []
testing = ["dirs", "whoami"]

[dev-dependencies]
tokio-test = "0.4"

# Optional deps for testing feature
[dependencies.dirs]
version = "6"
optional = true

[dependencies.whoami]
version = "1"
optional = true

[[bin]]
name = "sshtest"
path = "src/bin/sshtest.rs"
required-features = ["testing"]
